--- a/templates/result.html
+++ b/templates/result.html
@@ -2,6 +2,10 @@
     <h2> The final Results</h2>
 
     <body>
-        The output is {{result}}
+        {% if result >=50 %}
+        <h1> Your result is passed </h1>
+        {% else %}
+        <h1> Your result is failed </h1>
+        {% endif %}
     </body>
 </html>
